--- a/src/app/client/placeorder/placeorder.component.html
+++ b/src/app/client/placeorder/placeorder.component.html
@@ -6,11 +6,17 @@
       <p class="text-center text-white">Orders are itemized by property, per unit.</p>
       <br>
     </div>
+    <div class="row">
+      <div class="col-md-4 col-4 text-left">
+          <a [routerLink]="['/main/home']" routerLinkActive="router-link-active" skipLocationChange>
+            <img src="/assets/image/icons/arrow1.png" class="img-fluid size">
+          </a>   </div>
+      </div>
   </div>
 </div>
 <div class="row">
   <div class="offset-md-2 col-md-8 col-xs-12">
-    <h3 class="text-center mt-2">What type of property is this?</h3>
+    <h3 class="text-center mt-5">What type of property is this?</h3>
   </div>
 </div>
 <div class="row">
