--- a/src/app/admin/adminscheduled/adminscheduled.component.html
+++ b/src/app/admin/adminscheduled/adminscheduled.component.html
@@ -42,17 +42,15 @@
           </ng-container>
       <!--Edit/delete-->
       <ng-container matColumnDef="edit/delete">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit/Delete </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit </th>
         <td mat-cell *matCellDef="let order">
+            <br>
           <button class="btn btn-primary btn-sm  my-2 mx-auto"data-toggle="modal" data-target="#scheduledModel" (click)="query(order.orderid)">  
             <i class="fa fa-edit" aria-hidden="true"></i>
         </button>
         
         <br>
-        <button class="btn btn-danger btn-sm my-2 mx-auto"
-         data-toggle="modal" data-target="#tablepModel">
-            <i class="fa fa-trash" aria-hidden="true"></i>
-        </button> 
+        
         </td>
         
       </ng-container>
@@ -68,6 +66,10 @@
   <div id="scheduledModel" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
+                        <div class="mx-3 py-2">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                             
+                        </div>
                     <div class="row p-2">
                         <div class="col-4">
                             <p>
@@ -210,8 +212,8 @@
                                 </div>
                                 <div class="form-row mt-2" #elem [attr.id]="(property|async)?.orderid">
                                     <div class="col"  >
-                                        <button class="btn btn-primary" type="submit"  (click)="update(elem.id)" >Completed</button>
-                                        <button class="btn btn-danger mx-3" (click)="updated(elem.id)">Pending</button>
+                                        <button class="btn btn-primary" type="submit"  (click)="update(elem.id)" >Photoshoot Completed</button>
+                                        <button class="btn btn-danger mx-3" (click)="updated(elem.id)">Delete</button>
                                   </div>
                                   </div>
                           
