--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
-<div class="container-fluid">
-  
-    <router-outlet></router-outlet>
 
+<div class="container-fluid">
+        
+                             
+            
+              
+  <div [@slideInOut]="triggerAnimation(outlet)" id="mainContainer">
+    <router-outlet #outlet="outlet" ></router-outlet>
+  </div>
+  
+  
 
 </div>
