--- a/src/app/client/addons/addons.component.html
+++ b/src/app/client/addons/addons.component.html
@@ -3,14 +3,15 @@
   <div class="bgdark col-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
+          <img src="/assets/image/icons/delivery1.png" class="img-fluid float-right delivery" >
           <h4 class="text-center sp">Products </h4>
     </div>
     <div class="row">
       <div class="col-md-4 col-4 text-left">
-          <button type="button" class="btn btn-link text-white" [routerLink]="['/products']" routerLinkActive="router-link-active" skipLocationChange >BACK</button>
+          <button type="button" class="btn btn-link text-white" [routerLink]="['/main/order/products']" routerLinkActive="router-link-active" skipLocationChange >BACK</button>
       </div>
       <div class="col-md-4 col-4 text-center">
-          <h5>Subtotal:<span class="sp">${{total}}</span></h5>
+          <h5 class="total">Subtotal:<span class="sp">${{total}}</span></h5>
         </div>
       <div class="col-md-4 col-4 text-right">
           <button type="button" (click)="paddonsupdated()" class="btn btn-link text-white">NEXT</button>
@@ -25,7 +26,7 @@
     </div>
   </div>
   <div class="row">
-      <div class="offset-2 col-8 my-2">
+      <div class="offset-1 col-10 mx-auto my-2">
           <button type="button" (click)="pushpcs($event,'Community shot')" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block">Community Shots(+$50)</button>
           <button type="button" (click)="pushpts($event,'Twlight Shot')" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block">Twlight Shots(+$50)</button>
           <button type="button" (click)="pushvrf($event,'Rush Fee')" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block">Rush Fee(+$75)</button>
