--- a/src/app/client/address/address.component.html
+++ b/src/app/client/address/address.component.html
@@ -3,6 +3,7 @@
   <div class="bgdark col-12">
     <div class=" col-md-12">
           <h3 class="text-center text-white">New Order > {{totalunits}} First Unit</h3>
+          <img src="/assets/image/icons/delivery1.png" class="img-fluid float-right delivery" >
           <h4 class="text-center sp">{{propertytype}} Address </h4>
     </div>
   </div> 
@@ -16,7 +17,7 @@
       </div>
       
     </div>
-    <div class="mt-3 mb-5 offset-1 col-10">
+    <div class="mt-5 mb-5 offset-1 col-11 mx-auto">
       <input type="text" placeholder="Street Address" class="numinput form-control p-4 text-center my-5"  formControlName="street" name="street" id="name" required >
     <!-- <p>{{addressformgroup.get('street').value}}</p> -->
        <!-- <div *ngIf="addressformgroup.controls['street'].haserror('required')">
