--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -14,7 +14,7 @@
                                                 <input type="email" required class="form-control-lg col-12 text-center" placeholder="Email" name="email" required
                                                         pattern="[^@]*@[^@]*" [(ngModel)]="cli.email" #email="ngModel" autocomplete="email" autofocus>
                                         </div>
-                                        <div class="col-1">
+                                        <div class="col-1 size">
                                                 <div *ngIf="email.invalid && (email.dirty || email.touched)" class="mt-2">
                                                 
                                                         <div *ngIf="email.errors.required">
@@ -34,7 +34,7 @@
                                                 <input type="password" required class="form-control-lg col-12 text-center" placeholder="Password" name="password"
                                                          [(ngModel)]="cli.phone" #password="ngModel" autocomplete="current-password">
                                         </div>
-                                        <div class="col-1">
+                                        <div class="col-1 size1">
                                                 <div *ngIf="password.invalid && password.dirty " class="mt-2">
                                                 
                                                         <div *ngIf="password.errors.required">
@@ -42,7 +42,7 @@
                                                 
                                                         </div>
                                                 </div>
-                                                <div *ngIf="password.touched" class="mt-2">
+                                                <div *ngIf="password.valid && (password.dirty || password.touched)" class="mt-2">
                                                 
                                                
                                                                 <img src="../../../assets/image/icons/tick.png" class="img img-responsive" style="width:2rem">
@@ -64,13 +64,13 @@
 
                         </div>
 
-                        <div class="offset-1 col-5 text-center">
+                        <div class="offset-1 col-5 text-center my-2">
                                 <button type="button" class="btn btn5 btn-block py-2" routerLink="/register">REGISTER
                                         ME</button>
 
 
                         </div>
-                        <div class="col-5 text-center">
+                        <div class="col-5 text-center my-2">
 
 
                                 <button type="button" class="btn btn5 btn-block py-2" routerLink="/forget">FORGOT INFO</button>
