--- a/src/app/client/register/register.component.html
+++ b/src/app/client/register/register.component.html
@@ -1,5 +1,8 @@
 <div class="row bgrd">
-  <div class="col-12 mt-5 mb-5">
+  <a class="float-left size"  [routerLink]="['/login']" routerLinkActive="router-link-active" skipLocationChange>
+      <img src="/assets/image/icons/arrow.png" class="img-fluid float-left">
+  </a>
+  <div class="col-12 mt-lg-5 mb-lg-5">
 
     <h2 class="text-center">Please let us know who to register.</h2>
   </div>
@@ -72,7 +75,7 @@
     </div>
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-        <button type="submit" [disabled]="!registerForm.valid" class="btn btninput btn-block mx-auto p-3">REGISTER
+        <button type="submit" [disabled]="!registerForm.valid" class="btn btninput btn-block mx-auto p-3">REGISTER ME
         </button>
       </div>
     </div>
