--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <h3 class="text-center text-white">New Order > First Unit</h3>
+        <img src="/assets/image/icons/delivery1.png" class="img-fluid float-right delivery" >
         <h4 class="text-center sp">Pick a Date </h4>
       </div>
     </div>
@@ -13,11 +14,11 @@
     <div class="bgdark col-12">
       <div class="row">
         <div class="col-md-4 col-4 text-left">
-          <button type="button" class="btn btn-link text-white" [routerLink]="['/access']" routerLinkActive="router-link-active"
+          <button type="button" class="btn btn-link text-white" [routerLink]="['/main/order/access']" routerLinkActive="router-link-active"
             skipLocationChange>BACK</button>
         </div>
         <div class="col-md-4 col-4 text-center">
-          <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
+          <h5 class="total">Subtotal:<span class="sp">${{orderprice}}</span></h5>
         </div>
         <div class="col-md-4 col-4 text-right">
           <button type="button" type="submit" class="btn btn-link text-white">NEXT</button>
@@ -30,8 +31,8 @@
         <h3 class="text-center my-5">Please choose an available date for this order </h3>
       </div>
 
-    <div class="col-12 py-5 ">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-2 px-5">
+      <div  class="offset-lg-4  offset-1 col-10 py-5 ">
+        <div class=" mx-auto  my-2 px-5">
         <mat-form-field class="example-full-width">
           <input name="visitingdate" matInput ngModel #visitingdate="ngModel" [matDatepickerFilter]="myFilter"  [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date" >
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
